# SCTX-Converter

./: CMakeLists.txt  README.md
cmake/: dependencies.cmake
sctx-converter/: CMakeLists.txt
sctx-converter/source/: converter.cpp  converter.h  main.cpp  main.h
